--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="./js/script.js" defer></script>
+    <script src="./script.js" defer></script>
     <title>Gug Barseghyan</title>
 </head>
 
 <body>
     <div class="gug">
         <gug class="gugD">
-            <img src="./img/Me.png" alt="Me" title="Gug Barseghyan">
+            <img src="./Me.png" alt="Me" title="Gug Barseghyan">
             <h1>Gug Barseghyan</h1>
             <p>I'm Gug Barseghyan, from Vardenis, Armenia. <br> I have been in music area for more than 5 years.
                 And now I’m in programming already for more than a year.<br>
