--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Gug Barseghyan</h1>
             <p>I'm Gug Barseghyan, from Vardenis, Armenia. <br> I have been in music area for more than 5 years.
                 And now I’m in programming already for more than a year.<br>
-            Whatch my <a href="#">CV</a> <br> My founded startup` <a href="https://www.facebook.com/TechnologyLearningPlanet/">TLP</a></p>
+            Whatch my <a href="#">CV</a> <br> Our founded startup` <a href="https://www.facebook.com/TechnologyLearningPlanet/">TLP</a></p>
             <h2>Contact with me</h2>
             <a href="https://github.com/GugBarseghyan"><i class="fab fa-github"></i></a>
 
